# north

./: Cargo.toml  README.md  run_profile
data/: ambiguous.g  ansi_c.g  exprs.g  ident.g  ident.txt  input_100k.txt  input_10k.txt  input_200k.txt  input_20k.txt  input_40k.txt  input_5k.txt  input_80k.txt  input_gcc_100k.i  input_mini.txt  input_rust_10k.rs  (+9 more)
lang_base/: Cargo.toml
lang_base/src/: builtin.rs  lexer.rs  lib.rs  parse.rs
lang_base/src/gen_mir/: mod.rs  reduce_lval.rs  reduce_mod.rs  reduce_type.rs  reduce_value.rs
lang_base/src/runtime/: task.rs
lang_base/src/sema/: derive_scope.rs  infer_types.rs  mod.rs  resolve.rs  resolve_constr.rs  unify_types.rs
lang_base/src/structure/: ast.rs  token.rs
lang_evm/: Cargo.toml
lang_evm/src/: lib.rs
lang_evm/src/alloc/: abox.rs  free_list.rs  fridge.rs  mod.rs  scoped_alloc.rs
lang_evm/src/base_ext/: ast.rs  builtin.rs  mod.rs  parse.rs
lang_evm/src/base_ext/gen_mir/: mod.rs  reduce_call.rs  reduce_expr.rs  reduce_gexpr.rs  reduce_item.rs  reduce_type.rs  reduction.rs
lang_evm/src/base_ext/sema/: collect_impls.rs  derive_scope.rs  infer_types.rs  mod.rs  resolve.rs  unify_types.rs
lang_evm/src/collections/: bit_mask.rs  block_vec.rs  fixed_trie.rs  histogram.rs  linear_map.rs  linked_list.rs  linked_map.rs  mod.rs  small_map.rs  table.rs
lang_evm/src/mir_ext/: mark_persistent.rs  mir.rs  mod.rs  print.rs
lang_evm/src/mir_ext/gen_llvm/: mod.rs  reduce_rule.rs
lang_evm/src/mir_ext/optimizer/: build_closure.rs  build_dfa.rs  build_groups.rs  build_succs.rs  mod.rs
lang_evm/src/optimizer/: _vec_map.rs  closure.rs  closure_builder.rs  closure_interner.rs  dfa.rs  dfa_builder.rs  group.rs  group_builder.rs  mod.rs  optimizer_aspect.rs  rule_builder.rs  succ_builder.rs
lang_evm/src/runtime/: _chart.rs.old  _frame_stack.rs  _trace.rs  chart.rs  cursor.rs  grammar.rs  jit_resolver.rs  match_map.rs  mod.rs  options.rs  parser_ctx.rs  spec.rs  task.rs  trace.rs  trace_entry.rs
lang_evm/src/util/: flags.rs  index.rs  interner.rs  manual_init.rs  mod.rs
lang_llvm_sys/: Cargo.toml
lang_llvm_sys/src/: builder.rs  context.rs  dsl.rs  jit_engine.rs  lib.rs  pass_manager.rs  reductions.rs  serializer.rs
lang_llvm_sys/src/types/: mod.rs  reduce_type.rs
lang_mir/: Cargo.toml
lang_mir/src/: builder.rs  codegen_ctx.rs  cursor.rs  layout.rs  lib.rs  print.rs  quote_type.rs  quote_value.rs  reductions.rs  to_value.rs
lang_mir/src/mir/: mod.rs  ty.rs
lang_mir_to_llvm/: Cargo.toml
lang_mir_to_llvm/src/: lib.rs
lang_mir_to_llvm/src/reduce/: mod.rs  reduce_block.rs  reduce_ctl.rs  reduce_mod.rs  reduce_type.rs  reduce_value.rs
north_core/: Cargo.toml
north_core/src/: context.rs  lib.rs  node_id.rs  pos.rs  trait_manager.rs
north_core/src/cell/: borrow_cell.rs  cell_map.rs  compiler_cell.rs  macros.rs  mod.rs  model_key.rs  small_box.rs
north_core/src/compiler/: aspect.rs  diag.rs  mod.rs  pass.rs  pass_manager.rs  rule.rs
north_core/src/iter/: adapter.rs  ancestors.rs  borrow_nodes.rs  cast_id.rs  children.rs  descendants.rs  filter_cast.rs  mod.rs
north_core/src/location/: mod.rs
north_core/src/model/: concept.rs  concept_descr.rs  language.rs  mod.rs  node.rs  printer.rs  prop_map.rs  value.rs
north_core/src/model/element/: child_elem.rs  descendants.rs  element.rs  mod.rs
north_core/src/model/member/: child.rs  child_link.rs  link.rs  member_descr.rs  mod.rs  reference.rs  reference_link.rs  token_member.rs
north_core/src/quote/: mod.rs  quote_fn.rs  quote_type.rs  rust_type.rs
north_core/src/structure/: forest.rs  mod.rs  storage.rs
north_core/src/util/: cast.rs  chain.rs  downcast.rs  dyn_traits.rs  mod.rs  node_cache.rs  opaque_object_ref.rs  token.rs  trait_object.rs  unique_map.rs
north_core/src/visitor/: mod.rs  rules.rs  visit.rs  visit_pass.rs
test/: Cargo.toml
test/src/: command_line.rs  main.rs  parser.rs  profiler.rs
(+69 files in other folders)
